<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/leaves_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ButtonDIstanceFromBottom">

        <FrameLayout
            android:id="@+id/main_logo_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:foregroundGravity="center_horizontal"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/homeCircle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/circle" />

            <ImageView
                android:id="@+id/homeImageLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:baselineAlignBottom="@drawable/circle"
                android:src="@drawable/icegreen_logo" />
        </FrameLayout>
        <TextView
            android:id="@+id/Title1"
            android:paddingTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_logo_home"
            android:text="@string/TitleOneOnboarding"
            android:textSize="28dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/Context1Onboarding"
            android:text="@string/TextOneOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Title1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/Title2"
            android:layout_below="@+id/Context1Onboarding"
            android:text="@string/TitleTwoOnboarding"
            android:paddingTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/Context2Onboarding"
            android:layout_below="@id/Title2"
            android:text="@string/TextTwoOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="16dp"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/Title3"
            android:layout_below="@+id/Context2Onboarding"
            android:text="@string/TitleThreeOnboarding"
            android:paddingTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/Context3Onboarding"
            android:layout_below="@id/Title3"
            android:text="@string/TextThreeOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="16dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/Title4"
            android:layout_below="@+id/Context3Onboarding"
            android:text="@string/TitleFourOnboarding"
            android:paddingTop="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/Context4Onboarding"
            android:layout_below="@id/Title4"
            android:text="@string/TextFourOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="16dp"
            android:textColor="@color/white" />
        <TextView
            android:text="@string/CollectSlogan"
            android:id="@+id/collectSloganOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_below="@id/Context4Onboarding"
            android:textColor="@color/white"
            android:textSize="30dp"/>
        <FrameLayout
            android:layout_below="@+id/collectSloganOnBoarding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">
            <TextView
                android:textAlignment="center"
                android:drawableBottom="@drawable/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Next"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorDarkLeaf"
                android:textSize="22dp"
                android:clickable="true"
                android:textStyle="bold"
                android:onClick="goToLogin"/>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>
