<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.icemobile.icegreen.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/leaves_background">

    <FrameLayout
        android:id="@+id/main_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:foregroundGravity="center_horizontal"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/homeCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/homeImageLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:baselineAlignBottom="@drawable/circle"
            android:src="@drawable/icegreen_logo" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <TextView
        android:id="@+id/enterNameText"
        android:text="@string/whatsYourName"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_logo_login"
        android:paddingTop="35dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="30dp"
        android:textSize="24dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/enterNameBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/enterNameText"
        android:layout_alignStart="@+id/enterNameText"
        android:layout_below="@+id/enterNameText"
        android:background="@drawable/text_box"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:text="@string/enterName"
        android:textColor="@color/lightGrey"
        android:textSize="18dp"
        android:layout_marginRight="30dp"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <RelativeLayout
        android:layout_below="@+id/enterNameBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/ButtonDIstanceFromBottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Next"
                android:background="@drawable/button"
                android:gravity="center"
                android:textColor="@color/colorDarkLeaf"
                android:textSize="22dp"
                android:onClick="goToProfile"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
