<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:elevation="3dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/card_profile_pic"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@drawable/profile"/>

            <RelativeLayout
                android:id="@+id/card_user_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/card_profile_pic"
                android:paddingLeft="15dp"
                android:paddingRight="80dp">
                <TextView
                    android:id="@+id/name_space_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/Username" />
                <TextView
                    android:id="@+id/user_total_leaves"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/name_space_card"
                    android:text="@string/currentLeavesNumber"
                    android:gravity="center"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/name_space_card"
                    android:layout_toRightOf="@id/user_total_leaves"
                    android:gravity="center"
                    android:paddingLeft="5dp">
                    <FrameLayout
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/circle_shadow" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/leaf" />
                    </FrameLayout>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_toRightOf="@id/card_user_info"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/circle_shadow"/>
                    <TextView
                        android:id="@+id/Leaderboard_ranking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/leaderboardRanking"
                        android:gravity="center"
                        android:textSize="30dp"
                        android:textStyle="bold"/>
                </FrameLayout>
            </RelativeLayout>
            </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>