<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LeaderboardActivity"
    android:background="@drawable/leaves_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/Leaderboard_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:gravity="right">
            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:src="@drawable/profile" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/Current_User_Plant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:gravity="center">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/circle_shadow" />
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/green_plant20" />
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/current_leaves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Current_User_Plant"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentLeavesNumber"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/circle"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/leaf"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Food_Wastage_Stats"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@drawable/text_container_white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodWastageTitle"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="21.4 kg"
                android:gravity="center"
                android:background="@drawable/kilo_saved_background"
                android:textColor="@color/white"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/leaderboard_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:text="@string/leaderboardTitle"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
